[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://scenes/ui/TitleScene.gd" id="1_cw5kg"]
[ext_resource type="Texture2D" path="res://assets/sprites/menu_bg.jpg" id="2_bg"]
[ext_resource type="Shader" path="res://systems/shaders/RealityGlitch.gdshader" id="3_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_title"]
shader = ExtResource("3_shader")
shader_parameter/intensity = 0.2

[node name="TitleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cw5kg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="GlitchOverlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_title")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.027, 0.027, 0.05, 0.5)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.4, 0.1, 0.1, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 110
text = "SOULWALKER"
horizontal_alignment = 1

[node name="RedactionBar" type="ColorRect" parent="VBox/Label"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -10.0
offset_right = 550.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SubTitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "REDACTED ARCHIVE"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.6, 1, 0.8)
theme_override_font_sizes/font_size = 14
text = "[Identity Maintenance Protocol: ACTIVE]"
horizontal_alignment = 1

[node name="ControlSpacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StartButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "INITIATE CALIBRATION"

[node name="QuitButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "TERMINATE"

